CProgrammierung/eval_pipline/resources/testcases/bad/fail_mark_overflow_64bit.stdin
k63mogcptaqm3:zhvxi1n2q,m2jfg65erc8ch,tgfzok,ztuwj74a67,nymlzf,mvgclk59ydewmysfjus
zhvxi1n2q:ztuwj74a67
ftpcy2pu9kxjh:zhvxi1n2q,k63mogcptaqm3,tgfzok,ztuwj74a67,v8mj7zuranf,mvgclk59ydewmysfjus,i9,m2jfg65erc8ch
8gp:ftpcy2pu9kxjh,tgfzok,k63mogcptaqm3,zhvxi1n2q,ztuwj74a67,v8mj7zuranf,gi60cvzxh4fnob2k,i9,m2jfg65erc8ch
tgfzok:ztuwj74a67,zhvxi1n2q,v8mj7zuranf
1n0rzcyy1b68u:ztuwj74a67,v8mj7zuranf,zhvxi1n2q,ftpcy2pu9kxjh,8gp,tgfzok,gi60cvzxh4fnob2k,a2a1wfw531,njoqbbxrjw5k,4dagcwvhcbfim2p
v8mj7zuranf:ztuwj74a67
gi60cvzxh4fnob2k:v8mj7zuranf,tgfzok,ztuwj74a67,njoqbbxrjw5k,l9av7fjb6oc6mk,mlu1zy926
a2a1wfw531:gi60cvzxh4fnob2k,njoqbbxrjw5k,tgfzok,ztuwj74a67,v8mj7zuranf,l9av7fjb6oc6mk,mlu1zy926,uag59qisxknu
njoqbbxrjw5k:ztuwj74a67,v8mj7zuranf,uag59qisxknu,vdl5v5kvinpw
4dagcwvhcbfim2p:njoqbbxrjw5k,l9av7fjb6oc6mk,v8mj7zuranf,gi60cvzxh4fnob2k,a2a1wfw531,mlu1zy926,uag59qisxknu,vdl5v5kvinpw,kdck1no8qsi
l9av7fjb6oc6mk:mlu1zy926,v8mj7zuranf,njoqbbxrjw5k,uag59qisxknu,vdl5v5kvinpw
mlu1zy926:uag59qisxknu,njoqbbxrjw5k,vdl5v5kvinpw
uag59qisxknu:vdl5v5kvinpw
kdck1no8qsi:vdl5v5kvinpw,l9av7fjb6oc6mk,mlu1zy926,uag59qisxknu,s631ekhyx,r05ahkfu7-9223372036854775808
4qqiagr99odqpm9:kdck1no8qsi,l9av7fjb6oc6mk,mlu1zy926,uag59qisxknu,vdl5v5kvinpw,bxory441nih,s631ekhyx,r05ahkfu7-970
22j:4qqiagr99odqpm9,bxory441nih,mlu1zy926,uag59qisxknu,vdl5v5kvinpw,kdck1no8qsi,s631ekhyx,r05ahkfu7,294x44sc7tqf3,7zt95gb7ff0
bxory441nih:s631ekhyx,uag59qisxknu,vdl5v5kvinpw,kdck1no8qsi,r05ahkfu7
s631ekhyx:vdl5v5kvinpw
r05ahkfu7:s631ekhyx
294x44sc7tqf3:r05ahkfu7,7zt95gb7ff0,4qqiagr99odqpm9,bxory441nih,s631ekhyx,6lj81e88z,nymlzf,mvgclk59ydewmysfjus,i9
7zt95gb7ff0:bxory441nih,s631ekhyx,r05ahkfu7,nymlzf,mvgclk59ydewmysfjus,i9,m2jfg65erc8ch-659
6lj81e88z:7zt95gb7ff0,nymlzf,bxory441nih,s631ekhyx,r05ahkfu7,mvgclk59ydewmysfjus,i9,m2jfg65erc8ch,k63mogcptaqm3
nymlzf:s631ekhyx,r05ahkfu7,zhvxi1n2q
mvgclk59ydewmysfjus:nymlzf,r05ahkfu7,zhvxi1n2q
i9:mvgclk59ydewmysfjus,m2jfg65erc8ch,nymlzf,k63mogcptaqm3,zhvxi1n2q
m2jfg65erc8ch:nymlzf,mvgclk59ydewmysfjus,zhvxi1n2q,tgfzok
A:ftpcy2pu9kxjh
I:100
